--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/classalto/express-lab/issues"
   },
-  "homepage": "https://github.com/classalto/express-lab#readme"
+  "homepage": "https://github.com/classalto/express-lab#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "jest": "^26.6.3",
+    "supertest": "^6.1.3"
+  }
 }
